(env (_
 (binaries merlin-wrapper ocamlc-wrapper jq)
 (env-vars
  (MERLIN merlin-wrapper)
  (OCAMLC ocamlc-wrapper))))

(cram
 (package merlin)
 (applies_to :whole_subtree)
 (deps
  %{bin:merlin-wrapper}
  %{bin:ocamlc-wrapper}
  %{bin:ocamlmerlin-server}
  %{bin:ocamlmerlin}
  %{bin:dot-merlin-reader}
  %{bin:jq}))

(cram
 (applies_to with-ppx)
 (deps (package ppxlib)))
