(env (_
 (binaries merlin-wrapper ocamlc-wrapper revert-newlines)
 (env-vars
  (MERLIN merlin-wrapper)
  (OCAMLC ocamlc-wrapper))))

(cram
 (package merlin)
 (applies_to :whole_subtree)
 (deps
  %{bin:merlin-wrapper}
  %{bin:ocamlc-wrapper}
  %{bin:ocamlmerlin-server}
  %{bin:ocamlmerlin}
  %{bin:dot-merlin-reader}
  %{bin:revert-newlines}
  %{bin:ocaml-index}))

(cram
 (applies_to with-ppx)
 (deps (package ppxlib)))
