(cram
 (applies_to issue1404 issue827)
 (enabled_if
  (<> %{os_type} Win32)))

(cram
 (applies_to occ-with-ppx)
 (enabled_if false))

; Jane Street disabled tests -- they use dune.
; Revisit when dune can run the flambda-backend compiler.
(cram
  (enabled_if false)
  (applies_to
    occurrences/occ-with-ppx))
