; FIXME: disabled Jane Street tests that are failing internally because they
; stack overflow. This was fixed upstream at some unknown point. The tests were
; only added in this PR: https://github.com/ocaml/merlin/pull/1805, which we
; picked up in a merge where our version of merlin still suffered from the
; stack overflow.
(cram
  (enabled_if false)
  (applies_to
     issue1335
     issue1755))
