(cram
 (applies_to :whole_subtree)
 (locks ../server-tests/merlin_server))

(cram
 (applies_to :whole_subtree)
 (enabled_if (= %{env:MERLIN_TESTS=default} all)))

; Jane Street disabled tests -- they use dune.
; Revisit when dune can run the flambda-backend compiler.

(cram
 (enabled_if false)
 (applies_to
  issue1647-cache-invalidation
  issue1660-deriving-compare
  issue1671-string
  parsetree-cache
  typed-holes))
