(cram
 (applies_to f-all_local f-from_application f-generative f-included
   f-missed_shadowing f-nested_applications f-test-ml-mli)
 (enabled_if
  (<> %{os_type} Win32)))

; Jane Street disabled tests -- they use dune.
; Revisit when dune can run the flambda-backend compiler.
(cram
  (enabled_if false)
  (applies_to
    f-test-ml-mli))
