(cram
 (applies_to :whole_subtree)
 (enabled_if %{bin-available:ocaml-index}))

; Jane Street disabled tests -- they use dune.
; Revisit when dune can run the flambda-backend compiler.
(cram
  (enabled_if false)
  (applies_to pwo-ml-gen))

; (cram
;  (applies_to pwo-ml-gen)
;  (enabled_if (and %{bin-available:ocaml-index} (>= %{read:version/dune.txt} "3.16"))))

(cram
 (applies_to :whole_subtree)
 (enabled_if
  (<> %{os_type} Win32)))

(subdir
 version
 (rule (action (with-stdout-to dune.txt (run dune --version)))))

